--- a/src/app.html
+++ b/src/app.html
@@ -3,6 +3,7 @@
 	<head>
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
+		<Title> Cameron Courtney </Title>
 		<meta name="viewport" content="width=device-width" />
 		%sveltekit.head%
 	</head>
