Added footer with links to contact

--- a/src/app.html
+++ b/src/app.html
@@ -5,6 +5,10 @@
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<title>Cameron Courtney</title>
 		<meta name="viewport" content="width=device-width" />
+		<!-- Icons -->
+		<script src="https://kit.fontawesome.com/7334976020.js" crossorigin="anonymous"></script>
+		<!-- Apple Favicon -->
+		<link rel="apple-touch-icon" href="%sveltekit.assets%/favicon.png"/>
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover" data-theme="skeleton">
