--- a/src/app.html
+++ b/src/app.html
@@ -9,6 +9,20 @@
 		<script src="https://kit.fontawesome.com/7334976020.js" crossorigin="anonymous"></script>
 		<!-- Apple Favicon -->
 		<link rel="apple-touch-icon" href="%sveltekit.assets%/favicon.png" />
+		<link
+			rel="preload"
+			href="%sveltekit.assets%/fonts/Albert_Sans/AlbertSans-VariableFont_wght.ttf"
+			as="font"
+			type="font/ttf"
+			crossorigin
+		/>		
+		<link
+			rel="preload"
+			href="%sveltekit.assets%/fonts/Albert_Sans/AlbertSans-Italic-VariableFont_wght.ttf"
+			as="font"
+			type="font/ttf"
+			crossorigin
+		/>				
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover" data-theme="skeleton">
